Barebones first version

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=One Tick Flick Metronome
+author=Minhs2
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=A metronome timed specifically to aid with one tick prayer flicking.
+tags=tick,timers
+plugins=com.onetickflick.OneTickFlickPlugin
